[package]
name = "labels"
version = "0.1.0"
edition = "2021"

[dependencies]
minifb = { version = "0.27.0", default-features = false, features = ["x11"] }
ab_glyph = "0.2.29"
image-webp = "0.2.0"
bytes = "1.7.2"
tar-wasi = "0.4.38"
attohttpc = { version = "0.28.0", default-features = false, features = [
    "tls-rustls-webpki-roots",
] }
tinyjson = "2.5.1"
rustls = "0.23.14"
rustls-native-certs = "0.8.0"
rusb = "0.9.4"
color-eyre = { version = "0.6.3", default-features = false }
serialport = "4.5.1"
log = "0.4.22"
env_logger = "0.11.5"
rustrict = "0.7.31"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1

[profile.release.package.tar-wasi]
opt-level = 3

[profile.dev.package.tar-wasi]
opt-level = 3

[workspace]
resolver = "2"
members = [".", "iconTools/tools"]
